# gen3schemadev

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Readme.md  datas_submittor.py  delete_files.py  delete_projects.py  fix_links.py  gen_acdc_synthetic_data.ipynb  metadata_service.py  metadata_validator.ipynb  patch_synth_data_acdc.ipynb  plausible_data_gen.py  populate_metadata_service.py  pyproject.toml  requirements.txt  setup.py  sheet2yaml-Beacon.py  sheet2yaml-CLI.py  sheet2yaml.py  transform_ausdiab.py  transform_users.yaml.py  users.yaml
.github/workflows/: build.yml  build_test.yml  publish_pypi.yml  publish_testpypi.yml
config/: etl_mappings.yaml  mapping.json
docs/: README.md  data_submitter.md  descriptors.md  dictionary_structure.md  example_usage.md  explainer_schema.yaml  gen3_schema_requirements.md  handy_tips.md  links.md  metadata_validator.md  planning.md  properties.md  schemas.md  setup.md
docs/core_concepts/: core_principles.md  pre_reading.md
file_type_templates/: README.md  dummy_bami.bam.bai  dummy_clinical.csv  dummy_clinical.txt  dummy_cram.cram.crai  dummy_image.nii  dummy_lipids.csv  dummy_metab.wiff  dummy_prot.mgf  dummy_serum.csv  dummy_varbed.bed  dummy_vcf.vcf  file_stats.json  generate_sizes_and_md5s.py  synthetic_file_index.yaml
gen3schemadev/: __init__.py  gen3datasubmitter.py  gen3object.py  gen3properties.py  gen3schematools.py  gen3synthdata.py  gen3validate.py  schemabundle.py
jupyter/: gen3_linkml.ipynb  generate_synthetic_data.ipynb  protoyping.ipynb  schema_dev_framework.ipynb  synth_data_transformations.ipynb  synthetic_validation.ipynb
scripts/: Readme.md  add_plausible_values.sh  build_for_ecr.sh  generate_and_submit_data.sh  generate_schema.sh  new_dict_and_data.sh  start_simulator_instance.sh  stop_simulator_instance.sh  test_schema.sh
tests/: conftest.py  input_example.yml  input_example_fail.yml  input_example_file_props.yml  test_bundle_determinism.py  test_cli_check_and_orphans.py  test_cli_generate_safety.py  test_cli_messages.py  test_converter.py  test_ddvis.py  test_extends.py  test_fix_refs_pipeline.py  test_gen3_template.py  test_input_model.py  test_input_validator.py  test_link_required.py  test_metaschema_validator.py  test_refs.py  test_rule_validator.py  test_utils.py  test_version.py
users/: __init__.py
(+132 files in other folders)
