[project]
name = "Gen3SchemaDev"
version = "2.1.1"
description = "Tool for data modelling in Gen3"
authors = [
    {name = "JoshuaHarris391",email = "harjo391@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12.10,<4.0"
dependencies = [
    "setuptools>=70.0",
    "gen3-validator (>=1.1.1,<2.0.0)",
    "linkml (>=1.9.4,<2.0.0)",
    "check-jsonschema (>=0.34.1, <0.35.0)",
    "pydantic (>=2.11.9,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
gen3schemadev = "gen3schemadev.cli:main"
